# ariel

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  GTECH  LICENSE  OWNERS  README.md  cloud_storage.py  common.ts  configuration.py  configuration.template.yaml  configuration.yaml  deploy.sh  generate_audio.py  index.ts  jest.config.js  main.py  models.py  package-lock.json  package.json  preprocess.py  process.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  run_debugger.sh  run_locally.sh  setup.py  setup.sh  test.sh  test.txt  test_coverage.sh  transcribe.py  translate.py  tsconfig.json  video.py
.github/workflows/: python-publish.yml
ariel/: __init__.py  audio_processing.py  colab_utils.py  dubbing.py  speech_to_text.py  text_to_speech.py  translation.py  video_processing.py
ariel/system_settings/: diarization.txt  edit_translation.txt  translation.txt
assets/: system_settings_translation.txt
backend/: .gitignore  Dockerfile  app.py  bucket_retention_policy.json  config.json.example  deploy-config.sh.TEMPLATE  deploy.sh  requirements.in  requirements.txt  run_local.sh  test.sh
docs/: user_manual.md
docs/images/: ariel-architecture.html
examples/: dubbing_workflow.ipynb  example_script_with_metadata.csv  example_script_with_metadata_elevenlabs.csv  example_script_with_metadata_google.csv  example_utterance_metadata_elevenlabs.csv  example_utterance_metadata_google.csv  video_ad_dubbing_gtech_ads_ariel_demo.ipynb
frontend/: .gitignore  .prettierrc.js  README.md  angular.json  eslint.config.js  package-lock.json  package.json  proxy.conf.json  tailwind.config.js  vitest.config.ts
frontend/public/: languages.json  voices.json
frontend/src/: index.html  main.ts  styles.scss
frontend/src/app/: app.config.ts  app.html  app.routes.ts  app.scss  app.spec.ts  app.ts
frontend/src/app/_components/error-dialog/: error-dialog.html  error-dialog.scss  error-dialog.ts
frontend/src/app/_components/speaker-modal/: speaker-modal.html  speaker-modal.scss  speaker-modal.ts
frontend/src/app/editor/: editor.html  editor.scss  editor.spec.ts  editor.ts
frontend/src/app/header/: header.html  header.scss  header.spec.ts  header.ts
frontend/src/app/home/: home.html  home.scss  home.spec.ts  home.ts
frontend/src/app/result/: result.html  result.scss  result.spec.ts  result.ts
frontend/src/app/services/: video-generation.service.ts
frontend/src/styles/: _variables.scss
gui/: Dockerfile  README.md  _main.py  deploy.sh  dubble_logic.py  main.py  project.toml  requirements.txt
gui/dubble/: __init__.py  av.py  configuration.py  dubble.py  gen_ai.py
gui/templates/: index.html
static/: be_script.js  script.js  style.css  sw.js  voices.json
static/js/: api.js  api.test.js  audio.js  audio.test.js  library.js  main.js  modals.js  modals.test.js  state.js  state.test.js  timeline.js  timeline.test.js  utils.js  utils.test.js  utterance.js  utterance.test.js
templates/: index.html  library.html  script.js  style.css  sw.js  test.html
tests/: audio_processing_test.py  colab_utils_test.py  dubbing_test.py  speech_to_text_test.py  test_cloud_storage.py  test_configuration.py  test_endpoints.py  test_endpoints_cloud.py  test_generate_audio.py  test_main.py  test_models.py  test_process.py  test_transcribe.py  test_translate.py  test_video_logic.py  text_to_speech_test.py  translation_test.py  video_processing_test.py
ui/: .gitignore  README.md  appsscript.json  deploy-ui.mjs  fix-animations.mjs  package-lock.json  package.json  rollup.config.mjs
ui/src/: config.ts.TEMPLATE  example-module.ts  index.ts
ui/src/ui/: .editorconfig  .gitignore  README.md  angular.json  package-lock.json  package.json
ui/src/ui/public/assets/: sample_dub.json  sample_utterances.json  sample_voices.json
ui/src/ui/src/: index.html  main.ts  styles.css
ui/src/ui/src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts  input-chips.component.css  input-chips.component.html  input-chips.component.ts
ui/src/ui/src/app/api-calls/: api-calls.mock.service.ts  api-calls.service.interface.ts  api-calls.service.ts
ui/src/ui/src/app/error-dialog/: error-dialog.component.html  error-dialog.component.ts
ui/src/ui/src/environments/: environment.development.ts  environment.ts
ui/test/: example-module.test.ts
