[project]
name = "ariel"
version = "2.0.0"
description = "A tool for dubbing videos."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.118.0",
    "google-cloud-aiplatform>=1.119.0",
    "google-cloud-storage>=2.19.0",
    "jinja2>=3.1.4",
    "google-genai>=0.5.4",
    "moviepy>=2.2.1",
    "soundfile>=0.13.1",
    "python-multipart>=0.0.26",
    "tenacity>=8.4.1",
    "google-cloud-logging>=3.12.1",
    "librosa>=0.11.0",
    "google-cloud-texttospeech>=2.33.0",
    "debugpy>=1.8.17",
    "faster-whisper>=1.2.1",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "torchaudio>=2.5.1",
    "torchcodec>=0.8.1",
    "onnxruntime>=1.18.0; platform_system != 'Darwin'", # For faster-whisper CPU
    "onnxruntime>=1.18.0, <1.19; platform_system == 'Darwin'", # For faster-whisper CPU
    "audio-separator[cpu]>=0.41.1",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]
torchaudio = [{ index = "pytorch-cpu" }]

[dependency-groups]
dev = [
    "basedpyright>=1.31.6",
    "coverage>=7.13.1",
    "ruff>=0.13.3",
    "ty>=0.0.23",
]

[tool.ruff]
# Google strongly enforces a strict 80-character line limit.
line-length = 80
indent-width = 2

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle (Basic syntax and spacing errors)
    "F",        # Pyflakes (Logical errors, unused variables)
    "I",        # isort (Import sorting)
    "N",        # pep8-naming (Google follows standard Python naming conventions)
    "D",        # pydocstyle (Docstring rules)
    "UP",       # pyupgrade (Google encourages modern Python features)
    "BLE",      # flake8-blind-except (Google strictly forbids catch-all `except:`)
    "B",        # flake8-bugbear (Catches common Python gotchas)
    "A",        # flake8-builtins (Prevents shadowing Python built-ins)
    "C4",       # flake8-comprehensions (Enforces proper comprehension usage)
    "TID",      # flake8-tidy-imports (Enforces absolute imports)
    "PL",       # Pylint (Google explicitly uses Pylint; Ruff implements many of its rules)
    "RUF",      # Ruff-specific enhancements
]

ignore = [
    # E501 warns about line lengths, but we let Ruff's formatter handle this automatically.
    "E501",

    # D100, D104: Google style doesn't strictly require docstrings on *every* single
    # public module or package if they are incredibly simple, but you can remove
    # these ignores if you want maximum strictness.
    "D100",
    "D104",
]

[tool.ruff.lint.pydocstyle]
# This is the magic bullet: it tells Ruff to explicitly validate your docstrings
# against the official Google Docstring format (Args:, Returns:, Raises:, etc.)
convention = "google"

[tool.ruff.lint.isort]
# Google import ordering (from our previous setup)
force-sort-within-sections = true
order-by-type = false
force-single-line = true
single-line-exclusions = [
    "collections.abc",
    "typing",
    "typing_extensions",
    "six.moves",
]

[tool.ruff.lint.flake8-tidy-imports]
# Google bans relative imports (e.g., `from . import foo`)
ban-relative-imports = "all"

[tool.ruff.lint.pep8-naming]
# Google style allows class attributes and module-level variables to start
# with an underscore to denote "internal" or "private" usage.
ignore-names = ["_*"]

[tool.ruff.lint.flake8-pytest-style]
# If you use pytest, Google allows `assert` statements in tests, but warns
# against them in production code. (Ruff's S101 rule catches assert usage).
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.format]
quote-style = "double"

# Automatically format Python code examples inside your docstrings!
docstring-code-format = true
docstring-code-line-length = 80

[tool.pyright]
reportUnknownMemberType = "none"
reportUnusedCallResult = "none"
reportMissingTypeStubs = "none"
